# lol-summoner-match-manager

./: README.md  main.py  pyproject.toml  requirements.txt
src/models/: player_history.py
src/services/: mongo.py  riot.py
static/: script.js
templates/: favorites.html  index.html  matches.html
