[tool.poetry]
name = "lol-summoner-match-manager"
version = "1.0.0"
description = ""
authors = ["iantoniolo <iantoniolo@hotmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.103.1"
pymongo = "^4.5.0"
pydantic = "^2.3.0"
requests = "^2.31.0"
uvicorn = "^0.23.2"
jinja2 = "^3.1.2"
python-multipart = "^0.0.6"

[tool.poetry.group.dev.dependencies]
flake8 = "^6.1.0"
black = "^23.9.1"
isort = "^5.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
